# ECUST-412

./: 20thREADME.md  README.md
20届智能车竞赛/: README.md
20届智能车竞赛/双车跟随（英飞凌）/: README.md
20届智能车竞赛/双车跟随（英飞凌）/无刷风扇/: README.md
20届智能车竞赛/双车跟随（英飞凌）/硬件/: README.md  TC364核心板V2.1.epro  前车mainboard_V3.2.epro  后车mainboard_V2.1.epro  无刷电调_V3.1.epro  电机驱动DRV8701_V1.0.epro  电机驱动DRV8701_V2.0（无限流）.epro  (+1 more)
20届智能车竞赛/平衡轮腿（英飞凌tc377）/: README.md
20届智能车竞赛/智能视觉（NXP）/: README.md
20届智能车竞赛/极速光电（NXP）/: README.md
20届智能车竞赛/极速光电（龙芯）/: README.md
20届智能车竞赛/极速光电（龙芯）/软件/EITF-stable-30-standby/: .gitignore  CMakeLists.txt  MobaXterm_192.168.137.31root_20250225_202141.rtf  canny_test  clean-cp  control-cpp-cp  control-h-cp  control.cpp  cross  debug.cpp  encoder.cpp  gpio.c  gpio.cpp  main  main-0.5  main-18s  main-bug-malloc  main-cp-0228  main-cp-0301  main-szw  main.cpp  main_gpio.c  main_pwm.c  motor.c  pid.cpp  pwm.c  rr  running  servo.c  tmp.txt  tools.cpp  udp_recv.py  含tcp.cpp  道宽.txt
20届智能车竞赛/极速光电（龙芯）/软件/EITF-stable-30-standby/cnoder/cnoder/: GPIO.cpp  GPIO.h  PwmController.cpp  PwmController.h  encoder.cpp  encoder.h  motor.c  motor.h  pwm.c  pwm.h  pwm_atim.cpp  pwm_atim.h  pwm_gtim.cpp  pwm_gtim.h  pwmcontrol  pwmcontrol_test.cpp  register.cpp  runing  running  servo.c  servo.h
20届智能车竞赛/极速光电（龙芯）/软件/EITF-stable-30-standby/include/: client.h  control.h  debug.h  encoder.h  motor.h  pid.h  pwm.h  register.h  servo.h  tools.h
20届智能车竞赛/极速越野（英飞凌）/: README.md
20届智能车竞赛/气垫越野（STC）/: README.md
20届智能车竞赛/缩微光电（英飞凌CYT）/: README.md
20届智能车竞赛/缩微电磁/: README.md
20届智能车竞赛/缩微电磁（STC）/: README.md
(+1476 files in other folders)
